// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Schema Snapshots > Input Schemas > BulkUpdateInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/BulkUpdateInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "BulkUpdateInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > CloneStructureInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/CloneStructureInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "CloneStructureInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > CompositeInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/CompositeInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "CompositeInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > DeduplicateInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/DeduplicateInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "DeduplicateInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > DependencyAnalyzeImpactInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/DependencyAnalyzeImpactInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "DependencyAnalyzeImpactInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > DependencyBuildInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/DependencyBuildInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "DependencyBuildInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > DependencyDetectCyclesInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/DependencyDetectCyclesInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "DependencyDetectCyclesInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > DependencyExportDotInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/DependencyExportDotInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "DependencyExportDotInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > DependencyGetDependenciesInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/DependencyGetDependenciesInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "DependencyGetDependenciesInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > DependencyGetDependentsInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/DependencyGetDependentsInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "DependencyGetDependentsInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > DependencyGetStatsInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/DependencyGetStatsInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "DependencyGetStatsInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > ExportLargeDatasetInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/ExportLargeDatasetInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "ExportLargeDatasetInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > ExportXlsxInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/ExportXlsxInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "ExportXlsxInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > GetFormResponsesInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/GetFormResponsesInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "GetFormResponsesInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > ImportAndFormatInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/ImportAndFormatInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "ImportAndFormatInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > ImportCsvInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/ImportCsvInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "ImportCsvInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > ImportXlsxInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/ImportXlsxInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "ImportXlsxInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > RangeInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/RangeInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "RangeInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > SetupSheetInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SetupSheetInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SetupSheetInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > SheetsAdvancedInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsAdvancedInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsAdvancedInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > SheetsAnalyzeInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsAnalyzeInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsAnalyzeInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > SheetsAppsScriptInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsAppsScriptInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsAppsScriptInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > SheetsAuthInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsAuthInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsAuthInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > SheetsBigQueryInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsBigQueryInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsBigQueryInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > SheetsCollaborateInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsCollaborateInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsCollaborateInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > SheetsConfirmInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsConfirmInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsConfirmInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > SheetsCoreInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsCoreInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsCoreInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > SheetsDataInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsDataInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsDataInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > SheetsDependenciesInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsDependenciesInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsDependenciesInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > SheetsDimensionsInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsDimensionsInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsDimensionsInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > SheetsFederationInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsFederationInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsFederationInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > SheetsFixInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsFixInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsFixInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > SheetsFormatInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsFormatInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsFormatInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > SheetsHistoryInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsHistoryInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsHistoryInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > SheetsQualityInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsQualityInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsQualityInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > SheetsSessionInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsSessionInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsSessionInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > SheetsTemplatesInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsTemplatesInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsTemplatesInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > SheetsTransactionInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsTransactionInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsTransactionInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > SheetsVisualizeInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsVisualizeInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsVisualizeInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > SheetsWebhookInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsWebhookInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsWebhookInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > SmartAppendInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SmartAppendInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SmartAppendInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > WebhookGetInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/WebhookGetInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "WebhookGetInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > WebhookListInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/WebhookListInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "WebhookListInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > WebhookRegisterInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/WebhookRegisterInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "WebhookRegisterInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > WebhookStatsInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/WebhookStatsInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "WebhookStatsInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > WebhookTestInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/WebhookTestInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "WebhookTestInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > WebhookUnregisterInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/WebhookUnregisterInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "WebhookUnregisterInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Input Schemas > WebhookWatchChangesInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/WebhookWatchChangesInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "WebhookWatchChangesInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > BulkUpdateOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/BulkUpdateOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "BulkUpdateOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > CloneStructureOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/CloneStructureOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "CloneStructureOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > CompositeErrorOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/CompositeErrorOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "CompositeErrorOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > CompositeOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/CompositeOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "CompositeOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > CompositeSuccessOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/CompositeSuccessOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "CompositeSuccessOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > DeduplicateOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/DeduplicateOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "DeduplicateOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > ExportLargeDatasetOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/ExportLargeDatasetOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "ExportLargeDatasetOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > ExportXlsxOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/ExportXlsxOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "ExportXlsxOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > GetFormResponsesOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/GetFormResponsesOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "GetFormResponsesOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > ImportAndFormatOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/ImportAndFormatOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "ImportAndFormatOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > ImportCsvOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/ImportCsvOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "ImportCsvOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > ImportXlsxOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/ImportXlsxOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "ImportXlsxOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > SetupSheetOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SetupSheetOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SetupSheetOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > SheetsAdvancedOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsAdvancedOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsAdvancedOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > SheetsAnalyzeOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsAnalyzeOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsAnalyzeOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > SheetsAppsScriptOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsAppsScriptOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsAppsScriptOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > SheetsAuthOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsAuthOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsAuthOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > SheetsBigQueryOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsBigQueryOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsBigQueryOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > SheetsCollaborateOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsCollaborateOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsCollaborateOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > SheetsConfirmOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsConfirmOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsConfirmOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > SheetsCoreOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsCoreOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsCoreOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > SheetsDataOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsDataOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsDataOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > SheetsDependenciesOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsDependenciesOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsDependenciesOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > SheetsDimensionsOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsDimensionsOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsDimensionsOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > SheetsFederationOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsFederationOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsFederationOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > SheetsFixOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsFixOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsFixOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > SheetsFormatOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsFormatOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsFormatOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > SheetsHistoryOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsHistoryOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsHistoryOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > SheetsQualityOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsQualityOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsQualityOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > SheetsSessionOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsSessionOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsSessionOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > SheetsTemplatesOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsTemplatesOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsTemplatesOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > SheetsTransactionOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsTransactionOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsTransactionOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > SheetsVisualizeOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsVisualizeOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsVisualizeOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > SheetsWebhookOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SheetsWebhookOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SheetsWebhookOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Output Schemas > SmartAppendOutputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/SmartAppendOutputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "SmartAppendOutputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Shared Schemas > ColorSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/ColorSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "ColorSchema": {},
  },
}
`;

exports[`Schema Snapshots > Shared Schemas > GridRangeSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/GridRangeSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "GridRangeSchema": {},
  },
}
`;

exports[`Schema Snapshots > Shared Schemas > NumberFormatSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/NumberFormatSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "NumberFormatSchema": {},
  },
}
`;

exports[`Schema Snapshots > Shared Schemas > RangeInputSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/RangeInputSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "RangeInputSchema": {},
  },
}
`;

exports[`Schema Snapshots > Shared Schemas > TextFormatSchema should match snapshot 1`] = `
{
  "$ref": "#/definitions/TextFormatSchema",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "TextFormatSchema": {},
  },
}
`;
